--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Planium</title>
+  <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -26,9 +27,10 @@
           vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os
           embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos,</p>
         <div class="row">
-          <div class="col-12 col-xl-6 d-flex align-self-xl-center justify-content-xl-center flex-column">
-            <button type="button" class="btn btn-primary">Plano individual</button>
-          </div>
+          <form class="col-12 col-xl-6 d-flex align-self-xl-center justify-content-xl-center flex-column"
+            action='./actions/register.php' method='POST'>
+            <button type="submit" name="btnRegister" class="btn btn-primary">Plano individual</button>
+          </form>
           <div class="col-12 col-xl-6 d-flex align-self-xl-center justify-content-xl-center flex-column">
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#confirmModal">Plano em
               grupo</button>
@@ -50,26 +52,31 @@
           <h5 class="modal-title" id="confirmModalLabel">Me conte quantas pessoas tem com você.</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <div class="modal-body">
-          <form>
+        <form class="form-validade" action='./actions/register.php' method='POST'>
+          <div class="modal-body">
             <div class="mb-3">
-              <label for="recipient-name" class="col-form-label">Quantidade de participantes:</label>
-              <input type="number" class="form-control" id="recipient-name">
+              <label for="beneficiaries-name" class="col-form-label">Quantidade de participantes:</label>
+              <input type="number" class="form-control" name="quantity" id="beneficiaries-name" value="2" min="1">
             </div>
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
-          <button type="button" class="btn btn-primary">Confirmar</button>
-        </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
+            <button type="submit" name="btnRegister" class="btn btn-primary">Confirmar</button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
-  <script src="assets/scripts.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+    integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
+    integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
