--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <h1 class="fw-bold">Cuidamos da sua saúde!</h1>
         <br>
         <h4>Faça seu plano agora mesmo!</h4>
-        <p class="lorem">Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e
-          vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os
-          embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos,</p>
+        <p class="lorem">Um novo método de realizar consultas médicas, de forma prática, ágil, barata e eficaz fazendo vida mais tranquila e feliz a um clique de você. A vida pede uma nova maneira de cuidar da
+          saúde. De um jeito próximo e humano, para prevenir e tratar doenças, proteger e acolher as pessoas ainda mais.
+        </p>
         <div class="row">
           <form class="col-12 col-xl-6 d-flex align-self-xl-center justify-content-xl-center flex-column"
             action='./actions/register.php' method='POST'>
